@@ -1,3 +1,4 @@
+10/1/10 get rid of "non-zero minimum" for E-field lines, it's not doing anything but complicating computations
 # 0.00.20 (44619) Oct 1, 2010
 10/1/10 fix: density (not number) of field lines is proportional to E_effective
 10/1/10 make physical parts of the capacitor transparent when E-field, Voltmeter or Field Detector is selected
